# AI-HUB-PYTHON

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROMPTS_REDESIGN_COMPLETE.md  QUICKSTART.md  README.md  README_FIRST_TIME_SETUP.md  REPOSITORY_SETUP_COMPLETE.md  SEARCH_SCRAPER_GUIDE.md  SETUP_API_KEY.md  Start_AI_Hub.bat  disable_mouse_automation.bat  enable_mouse_automation.bat  install_startup.ps1  install_taskbar.ps1  install_voice.bat  pyproject.toml  remove_autostart.bat  requirements-voice.txt  requirements.txt  run_ai_hub.bat  set_api_key.bat  setup.py  setup_autostart.bat  setup_taskbar.ps1  startup.bat  startup_ai_hub.bat  🖱️_MOUSE_AUTOMATION_GUIDE.md
.github/: PULL_REQUEST_TEMPLATE.md
Windows_and_Linux/: update_checker.py
config/: shortcuts_examples.json  window_settings.json
docs/: 00_FOLDER_STRUCTURE.txt  00_READ_ME_FIRST.txt  00_READ_THESE_FIRST.txt  ARCHITECTURE.md  CHAT_FIX_AND_PROMPT_SELECTOR.md  CLAUDE_FEATURE_TEMPLATE.md  CLAUDE_INTEGRATION_PROMPTS.md  COMPLETION_REPORT.txt  FAQ.md  INDEX.md  (+51 more)
reference_code/AI-HUB-main/: README.md  pyproject.toml
reference_code/AI-HUB-main/src/ai_hub/: __init__.py  app.py  config.py
reference_code/AI-HUB-main/src/ai_hub/hotkeys/: global_hotkeys.py  hotstrings.py
reference_code/AI-HUB-main/src/ai_hub/services/: openai_client.py  prompt_manager.py  selection.py
reference_code/AI-HUB-main/src/ai_hub/ui/: main_window.py
reference_code/AI-HUB-main/src/ai_hub/ui/dialogs/: prompt_navigator.py  result_popup.py
reference_code/AI-HUB-main/src/ai_hub/ui/tabs/: chat_tab.py  prompts_tab.py  spelling_tab.py
(+36 files in other folders)
