[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hub"
version = "0.2.0"
description = "AI-powered desktop hub with voice, shortcuts, chat, and automation."
authors = [{name = "AI Hub"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6,<7.0",
    "requests>=2.31",
    "keyboard>=0.13",
    "pynput>=1.8",
    "pyperclip>=1.8",
    "pywin32>=306; platform_system == 'Windows'",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1",
    "faster-whisper>=0.10",
    "sounddevice>=0.4",
    "scipy>=1.11",
    "numpy>=1.24",
    "pygame>=2.5",
]

[project.scripts]
ai-hub = "ai_hub.app:main"

[tool.setuptools.packages.find]
where = ["src"]
